--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,7 +217,8 @@ p {
 /*Portfolio IDs*/ 
 
 .piccontainer {
-  width: 100%;
+  /*width: 100%;*/
+  margin: 20px;
   /*padding-left:20px;*/
 }
 
@@ -227,10 +228,11 @@ p {
   display: inline-block;
   position: relative;
   height:200px;
-  width:230px;
+  width:240px;
   margin-top: 20px;
-  margin-bottom: 20px;
-  margin-left: 60px;
+  margin-bottom: 50px;
+  margin-left: 30px;
+  margin-right: 30px;
 
 }
 /*.container1 {
@@ -357,6 +359,15 @@ footer {
   #connect-with-me {
     width: 228px;
   }
+
+  /*.pic {
+    margin-right: 20px;
+  }
+*/
+  /*span {
+    bottom:-75px;
+
+  }*/
 }
 
 
@@ -380,10 +391,69 @@ footer {
   .divider-side {
     margin: 0;
   }
+
+  .pic {
+    width:35%;
+    margin-right: 40px;
+  }
+
+  span {
+
+  }
 }
 
 @media only screen and (max-width: 640px){
   
+  div.name {
+    margin-left: 0px;
+  }
+
+   .header > div:first-child {
+    margin-left:0px;
+  }
+
+  h1 {
+    width: 621px;
+  }
+
+  div.nav {
+    margin-right: 0px;
+  }
+
+
+  li {
+    padding: 40px 80px;
+    background-color: #fff;
+    margin-right: 0px;
+    border-bottom: 1px solid black;
+
+  }
+
+  #main-bio {
+    width: 585px;
+    margin: 20px;
+  }
+
+  #bio-image {
+    width:93%;
+    padding-top: 20px;
+  }
+
+  #connect-with-me {
+    width: 585px;
+    margin-right: 55px;
+    margin-top: 20px;
+    margin-bottom: 20px;  
+  }
+
+  .pic {
+    width: 90%;
+  }
+
+  span {
+    bottom: -250px;
+    padding: 20px;
+  }
 }
 
 
